<resources>
    <string name="app_name">Assignment1</string>
    <string name="return_button_text"> Back to Home Screen </string>
    <string name="exit_title_text">GAME OVER</string>
    <string name="Main_Title">Tic Tac Toe Showcase</string>
    <string name="Main_Instructions">Select the game you would like to play</string>
    <string name="button_wild_text">Wild Tic Tac Toe</string>
    <string name="button_random_text">Random Tic Tac Toe</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="info_text">Player 1 Wins!</string>
    <string name="exit_text">Exit Game</string>
    <string name="main_image_description">Main image, hands showing pieces</string>

    <string name="wild_rules">Wild Tic Tac Toe is played somewhat similarly to the original, 3 in a row wins. However, both players can place both X\'s and O\'s. Just tap the box to place an X or press and hold to place an O. Have Fun!</string>
    <string name="play_wild">Play Wild Tic Tac Toe</string>
    <string name="img_wildttt_desc">Book with Cup Wild Tic Tac Toe</string>
    <string name="play_wild_text">Wild Tic Tac Toe</string>

    <string name="random_title">Random Tic-Tac-Toe</string>
    <string name="play_random_text">Random Tic-Tac-Toe</string>
    <string name="play_random_tic_tac_toe">Play Random Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="next_player_text">Next Turn</string>
    <string name="buttonO_description">O icon</string>
    <string name="game_piece_description">Game Piece</string>
    <string name="instructions_text">In this version of Tic Tac Toe, player 1 plays the \"X\" pieces and player 2 plays the \"O\" pieces. The twist in this game is that a random player is chosen randomly at the beginning of each turn.\\n\\nTo begin each turn and assign a random payer, tap the \"Next Turn\" button before selecting a square.</string>
    <string name="instructions_go_here">INSTRUCTIONS GO HERE</string>

    <string name="misere"> Misère Tic Tac Toe </string>
    <string name="reset">Reset</string>
    <string name="home"> Home </string>
    <string name="score">Score</string>
    <string name="player1">Player 1(X\'s):\u0020\u0020 </string>
    <string name="player2">Player 2(0\'s):\u0020\u0020 </string>
    <string name="draw"> Draw:\u0020\u0020  </string>
    <string name="misereRules"> The goal of the game is <strong>NOT</strong> to get a tic tac toe. If you get a tic tac toe,
        you lose and your opponent wins! </string>
    <string name="play_misere"> Play Misere Tic Tac Toe </string>
</resources>
