<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/numbersImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/misere"
        android:src="@drawable/misere" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/misere"
        android:textSize="40sp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/rulesTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="30dp"
        android:lineSpacingExtra="10dp"
        android:textColor="#000"
        android:text="@string/misereRules" />

    <Button
        android:id="@+id/homeBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#ed55a9"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/home" />

    <Button
        android:id="@+id/gameBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#574d70"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/return_to_game" />

</LinearLayout>