<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".random_gameboard">

    <TextView
        android:id="@+id/game_title_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/random_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/titles"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_title_view">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button1_1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="centerInside"
                android:src="@drawable/x" />

            <ImageButton
                android:id="@+id/button1_2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="centerInside"
                android:src="@drawable/x" />

            <ImageButton
                android:id="@+id/button1_3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="centerInside"
                android:src="@drawable/x" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button2_1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/o" />

            <ImageButton
                android:id="@+id/button2_2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/o" />

            <ImageButton
                android:id="@+id/button2_3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/o" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/button3_1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="fitCenter"
                android:src="@drawable/x" />

            <ImageButton
                android:id="@+id/button3_2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="fitCenter"
                android:src="@drawable/x" />

            <ImageButton
                android:id="@+id/button3_3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:contentDescription="@string/game_piece_description"
                android:scaleType="fitCenter"
                android:src="@drawable/x" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/game_instructions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="INsSTRUCTIONS GO HERE"
        android:textColor="@color/text"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_player_text"
        app:layout_constraintBottom_toTopOf="@+id/game_instructions_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>